# volume-forecast

./: project_description.md  pyproject.toml  run-analyst-agent.py  run-data-specialist.py  run-researcher-agent.py  run-summarize-papers.py
artifacts/: paper_manifest.md  research_directions.md
artifacts/direction_2/: metrics.md  report.md
artifacts/direction_4/: evaluation_results.json  metrics.md  report.md
artifacts/direction_7/: impl_spec.md  metrics.md  report.md
data/direction_2/: AAPL_1m.parquet  AMGN_1m.parquet  AMZN_1m.parquet  (+28 more)
logs/: analyst_critic.files.md  analyst_critic.log.md  analyst_proposer.files.md  analyst_proposer.log.md  data_specialist_direction_2.files.md  data_specialist_direction_2.log.md  data_specialist_direction_4.files.md  data_specialist_direction_4.log.md  data_specialist_direction_7.files.md  data_specialist_direction_7.log.md  dev_direction_2.files.md  dev_direction_2.log.md  dev_direction_4.files.md  dev_direction_4.log.md  dev_direction_7.files.md  dev_direction_7.log.md  librarian.files.md  librarian.log.md  professor_direction_2.files.md  professor_direction_2.log.md  professor_direction_4.files.md  professor_direction_4.log.md  professor_direction_7.files.md  professor_direction_7.log.md  progress.md
papers/: bialkowski_darolles_lefol_2008.md  brownlees_cipollini_gallo_2011.md  calvori_cipollini_gallo_2014.md  chen_feng_palomar_2016.md  markov_vilenskaia_rashkovich_2019.md  mcculloch_2007.md  naimoli_storti_2019.md  satish_saxena_palmer_2014.md  szucs_2017.md
tools/: data_sources  data_tools  data_tools.md  librarian
(+470 files in other folders)
