[project]
name = "volume-profile"
version = "0.1.0"
description = "Quantitative research project"
requires-python = ">=3.12"
dependencies = [
      "requests",
      "beautifulsoup4",
      "arxiv",
      "pypdf",
      "pyyaml",
      "marker-pdf",
      "pandas>=3.0.2",
      "statsmodels>=0.14.6",
      "numba>=0.65.1",
      "numpy>=2.4.4",
      "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "notebook>=7.5.5",
]

